<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.Ben12345rocks</groupId>
	<artifactId>AdvancedCore</artifactId>
	<version>2.20.4</version>
	<packaging>jar</packaging>
	<name>AdvancedCore</name>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<!-- github server corresponds to entry in ~/.m2/settings.xml -->
		<github.global.server>github</github.global.server>
		<project.build.sourceEncoding>Cp1252</project.build.sourceEncoding>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
	</properties>
	<distributionManagement>
		<repository>
			<id>internal.repo</id>
			<name>Temporary Staging Repository</name>
			<url>file://${project.build.directory}/mvn-repo</url>
		</repository>
	</distributionManagement>
	<build>
		<resources>
			<resource>
				<directory>Resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>version.yml</include>
				</includes>
			</resource>
			<resource>
				<directory>Resources</directory>
				<filtering>false</filtering>
			</resource>
		</resources>
		<sourceDirectory>src</sourceDirectory>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.projectlombok</groupId>
										<artifactId>lombok-maven-plugin</artifactId>
										<versionRange>[1,)</versionRange>
										<goals>
											<goal>delombok</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok-maven-plugin</artifactId>
				<version>1.18.2.0</version>
				<executions>
					<execution>
						<id>delombok</id>
						<phase>deploy</phase>
						<goals>
							<goal>delombok</goal>
						</goals>
						<configuration>
							<addOutputDirectory>false</addOutputDirectory>
							<outputDirectory>${project.basedir}/target/delombok</outputDirectory>
							<sourceDirectory>${project.basedir}/src</sourceDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<finalName>${project.name}</finalName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
					<shadedArtifactAttached>false</shadedArtifactAttached>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<relocations>
								<relocation>
									<pattern>com.zaxxer.HikariCP</pattern>
									<shadedPattern>${project.groupId}.${project.artifactId}.HikariCP</shadedPattern>
								</relocation>
								<relocation>
									<pattern>com.zaxxer.hikari</pattern>
									<shadedPattern>${project.groupId}.${project.artifactId}.hikari</shadedPattern>
								</relocation>
							</relocations>
							<artifactSet>
								<!-- Lets exclude google code, because the server already has this 
									code in it (guava, etc) -->
								<excludes>
									<exclude>com.google.*:*</exclude>
								</excludes>
							</artifactSet>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<filters>
								<filter>
									<!-- this filter will remove en_US.properties from your jar. You 
										want this filter if you dont use the TranslatableComponent so you can keep 
										your jar file size down. -->
									<artifact>net.md-5:bungeecord-chat</artifact>
									<excludes>
										<exclude>*/*en_US.properties</exclude>
										<exclude>META-INF/maven/**</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<phase>deploy</phase>
						<configuration>
							<sourcepath>${project.basedir}/target/delombok</sourcepath>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.github</groupId>
				<artifactId>site-maven-plugin</artifactId>
				<version>0.12</version>
				<executions>
					<execution>
						<id>javadoc</id>
						<goals>
							<goal>site</goal>
						</goals>
						<phase>deploy</phase>
						<configuration>
							<message>Maven javadoc for ${project.version}</message>
							<noJekyll>true</noJekyll>
							<outputDirectory>${project.build.directory}/apidocs
							</outputDirectory>
							<branch>refs/heads/gh-pages</branch>
							<includes>
								<include>**/*</include>
							</includes>
							<repositoryName>AdvancedCore</repositoryName>
							<repositoryOwner>Ben12345rocks</repositoryOwner>
							<server>github</server>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>placeholderapi</id>
			<url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>bungee-repo</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.14.4-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.milkbowl.vault</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.6</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/Jars/Vault.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>LATEST</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-chat</artifactId>
			<version>1.13-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>
		<!-- <dependency> <groupId>com.github.Ben12345rocks</groupId> <artifactId>ChatComponentAPI</artifactId> 
			<version>master-SNAPSHOT</version> <scope>compile</scope> </dependency> -->
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>3.4.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.6.4</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.comphenix.protocol</groupId>
			<artifactId>ProtocolLib-API</artifactId>
			<version>LATEST</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/Jars/ProtocolLib.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>fr.xephi</groupId>
			<artifactId>authme</artifactId>
			<version>LATEST</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/Jars/AuthMe-5.4.0.jar</systemPath>
		</dependency>
	</dependencies>
</project>